@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2022 the original author or authors.
+// Copyright (C) 2001-2025 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -22,9 +22,12 @@ package com.puppycrawl.tools.checkstyle;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.Locale;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import org.junit.jupiter.api.BeforeEach;
 
 public abstract class AbstractPathTestSupport {
 
@@ -41,6 +44,15 @@ public abstract class AbstractPathTestSupport {
      * @return path for the package name for the file.
      */
     protected abstract String getPackageLocation();
+
+    /**
+     * Sets the English locale for all tests.
+     * Otherwise, some tests failed in other locales.
+     */
+    @BeforeEach
+    public void setEnglishLocale() {
+        Locale.setDefault(Locale.ENGLISH);
+    }
 
     /**
      * Retrieves the name of the folder location for resources.
@@ -86,7 +98,7 @@ public abstract class AbstractPathTestSupport {
      * @noinspectionreason RedundantThrows - false positive
      */
     protected static String readFile(String filename) throws IOException {
-        return toLfLineEnding(Files.readString(Paths.get(filename)));
+        return toLfLineEnding(Files.readString(Path.of(filename)));
     }
 
     /**
