@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2022 the original author or authors.
+// Copyright (C) 2001-2025 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -66,7 +65,7 @@ public class XdocsUrlTest {
 
     private static final String SUPPRESS_WARNINGS_HOLDER = "SuppressWarningsHolder";
 
-    private static final Path AVAILABLE_CHECKS_PATH = Paths.get("src/xdocs/checks.xml");
+    private static final Path AVAILABLE_CHECKS_PATH = Path.of("src/site/xdoc/checks.xml");
 
     private static Map<String, List<String>> getXdocsMap() throws IOException {
         final Map<String, List<String>> checksNamesMap = new HashMap<>();
@@ -76,7 +75,7 @@ public class XdocsUrlTest {
                     return AbstractCheck.class.isAssignableFrom(clazz)
                             || AbstractFileSetCheck.class.isAssignableFrom(clazz);
                 })
-                .collect(Collectors.toSet());
+                .collect(Collectors.toUnmodifiableSet());
         for (Class<?> check : treeWalkerOrFileSetCheckSet) {
             final String checkName = check.getSimpleName();
             if (!TREE_WORKER.equals(checkName)) {
@@ -102,7 +101,7 @@ public class XdocsUrlTest {
     public void testXdocsUrl() throws Exception {
         final SAXParserFactory parserFactory = SAXParserFactory.newInstance();
         final SAXParser parser = parserFactory.newSAXParser();
-        final CheckTest checkHandler = new CheckTest();
+        final DummyHandler checkHandler = new DummyHandler();
         try (InputStream input = Files.newInputStream(AVAILABLE_CHECKS_PATH)) {
             parser.parse(input, checkHandler);
         }
@@ -139,19 +138,15 @@ public class XdocsUrlTest {
                 assertWithMessage(moduleNameErrorMsg)
                         .that(moduleFileNames)
                         .isNotNull();
-                boolean match = false;
                 final String checkNameWithSuffix = checkNameInAttribute + SUFFIX_CHECK;
-                if (moduleFileNames.contains(checkNameWithSuffix)) {
-                    match = true;
-                }
                 assertWithMessage(checkNameModuleErrorMsg)
-                        .that(match)
-                        .isTrue();
+                        .that(moduleFileNames)
+                        .contains(checkNameWithSuffix);
             }
         }
     }
 
-    public static final class CheckTest extends DefaultHandler {
+    public static final class DummyHandler extends DefaultHandler {
 
         private static final String SPLIT_CHECK_NAME_IN_ATTRIBUTE = "#";
 
