@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2022 the original author or authors.
+// Copyright (C) 2001-2025 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -20,12 +20,12 @@
 package com.puppycrawl.tools.checkstyle.internal.utils;
 
 import java.io.IOException;
-import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -45,7 +45,7 @@ import org.xml.sax.SAXException;
  */
 public final class XdocUtil {
 
-    public static final String DIRECTORY_PATH = "src/xdocs";
+    public static final String DIRECTORY_PATH = "src/site/xdoc";
 
     private XdocUtil() {
     }
@@ -57,13 +57,33 @@ public final class XdocUtil {
      * @throws IOException if an I/O error occurs.
      */
     public static Set<Path> getXdocsFilePaths() throws IOException {
-        final Path directory = Paths.get(DIRECTORY_PATH);
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(directory, "*.xml")) {
-            final Set<Path> xdocs = new HashSet<>();
-            for (Path entry : stream) {
-                xdocs.add(entry);
-            }
-            return xdocs;
+        final Path directory = Path.of(DIRECTORY_PATH);
+        try (Stream<Path> stream = Files.find(directory, Integer.MAX_VALUE,
+                (path, attr) -> {
+                    return attr.isRegularFile()
+                            && (path.toString().endsWith(".xml")
+                            || path.toString().endsWith(".xml.vm"));
+                })) {
+            return stream.collect(Collectors.toUnmodifiableSet());
+        }
+    }
+
+    /**
+     * Gets xdocs template file paths. These are files ending with .xml.template.
+     * This module will be removed once
+     * <a href="https://github.com/checkstyle/checkstyle/issues/13426">#13426</a> is resolved.
+     *
+     * @return a set of xdocs template file paths.
+     * @throws IOException if an I/O error occurs.
+     */
+    public static Set<Path> getXdocsTemplatesFilePaths() throws IOException {
+        final Path directory = Path.of(DIRECTORY_PATH);
+        try (Stream<Path> stream = Files.find(directory, Integer.MAX_VALUE,
+                (path, attr) -> {
+                    return attr.isRegularFile()
+                            && path.toString().endsWith(".xml.template");
+                })) {
+            return stream.collect(Collectors.toUnmodifiableSet());
         }
     }
 
@@ -77,7 +97,10 @@ public final class XdocUtil {
         final Set<Path> xdocs = new HashSet<>();
         for (Path entry : files) {
             final String fileName = entry.getFileName().toString();
-            if (fileName.startsWith("config_")) {
+            // until https://github.com/checkstyle/checkstyle/issues/13132
+            if (fileName.startsWith("config_")
+                    || !entry.getParent().toString().matches("src[\\\\/]site[\\\\/]xdocs")
+                    && fileName.endsWith(".xml")) {
                 xdocs.add(entry);
             }
         }
